--- a/css_grid/index.html
+++ b/css_grid/index.html
@@ -4,10 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+           body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;  /* Centrado horizontal */
+            align-items: center;  /* Centrado vertical */
+            height: 100vh;  /* Ocupa el 100% de la altura de la ventana */
+            margin: 0;  /* Elimina márgenes por defecto */
+        }
+        
+        h3 {
+            background-color: #4CAF50; 
+            color: white;
+            padding: 15px 30px; 
+            margin: 10px;
+            width: 200px; 
+            border-radius: 10px;
+            text-align: center;  
+        }
+
+        h3 a {
+            color: white;  
+            text-decoration: none;  
+            display: block;  
+        }
+
+        h3:hover {
+            background-color: #122e13;  
+        }
+    </style>
 </head>
 <body>
-    <p>1</p>
-    <p>2</p>
-    <p>3</p>
+    <div>
+    <h3><a href="/css_grid/css_grid_1.html">1</a></h3>
+    <h3><a href="/css_grid/css_grid_2.html">2</a></h3>
+    <h3><a href="/css_grid/css_grid_3.html">3</a></h3>
+</div>
 </body>
 </html>
