--- a/css_grid/css_grid_1.html
+++ b/css_grid/css_grid_1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" contenido="width=device-width, initial-scale=1.0">
-    <title>Responsive CSS Grid</title>
+    <title>css grid 1</title>
     <style>
         body {
             margin: 0;
