--- a/css_grid/index.html
+++ b/css_grid/index.html
@@ -8,10 +8,9 @@
            body {
             font-family: Arial, sans-serif;
             display: flex;
-            justify-content: center;  /* Centrado horizontal */
-            align-items: center;  /* Centrado vertical */
-            height: 100vh;  /* Ocupa el 100% de la altura de la ventana */
-            margin: 0;  /* Elimina márgenes por defecto */
+            justify-content: center;  
+            align-items: center;  
+            height: 100vh;
         }
         
         h3 {
