--- a/css_grid/index.html
+++ b/css_grid/index.html
@@ -36,9 +36,9 @@
 </head>
 <body>
     <div>
-    <h3><a href="/css_grid/css_grid_1.html">1</a></h3>
-    <h3><a href="/css_grid/css_grid_2.html">2</a></h3>
-    <h3><a href="/css_grid/css_grid_3.html">3</a></h3>
+    <h3><a href="css_grid_1.html">1</a></h3>
+    <h3><a href="css_grid_2.html">2</a></h3>
+    <h3><a href="css_grid_3.html">3</a></h3>
 </div>
 </body>
 </html>
